--- a/app/Resources/views/layout/basic.html.twig
+++ b/app/Resources/views/layout/basic.html.twig
@@ -6,7 +6,7 @@
 
   <div class="page-header">
     <div class="container">
-      <h3 class="pull-left">
+      <h3 class="pull-left page-title">
         <a href="{{ path('homepage') }}">{{ 'ArgonBook' }}</a>
         <small>{{ 'Alternate Reality Games Oriented Network' }}</small>
       </h3>
