--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -10,6 +10,8 @@
 {% endblock %}
 
 {% block body %}
+  {% block header %}{% endblock %}
+
   {% for flashClass, flashMessages in app.session.flashbag.all() %}
     {% for flashMessage in flashMessages %}
       <div class="alert alert-{{ flashClass }}">{{ flashMessage|trans({}, 'flash') }}</div>
@@ -19,6 +21,8 @@
   {% block wrapper %}
     {% block content %}{% endblock %}
   {% endblock %}
+
+  {% block footer %}{% endblock %}
 {% endblock %}
 
 {% block javascripts %}
