--- a/app/Resources/views/layout/basic.html.twig
+++ b/app/Resources/views/layout/basic.html.twig
@@ -1,12 +1,12 @@
 {% extends "::layout.html.twig" %}
 {% trans_default_domain 'web' %}
 
-{% block body %}
+{% block header %}
   {#<div class="locale_switcher">{{ locale_switcher() }}</div>#}
 
   <div class="page-header">
     <div class="container">
-      <h3 class="pull-left page-title">
+      <h3 class="page-title pull-left">
         <a href="{{ path('homepage') }}">{{ 'ArgonBook' }}</a>
         <small>{{ 'Alternate Reality Games Oriented Network' }}</small>
       </h3>
@@ -30,21 +30,4 @@
       </ul>
     </div>
   </div>
-
-  {% if app.session.flashbag.keys()|length %}
-  <div class="section section-empty">
-    <div class="container">
-    {% for flashClass, flashMessages in app.session.flashbag.all() %}
-      {% for flashMessage in flashMessages %}
-        <div class="alert alert-{{ flashClass }}">{{ flashMessage|trans({}, 'flash') }}</div>
-      {% endfor %}
-    {% endfor %}
-    </div>
-  </div>
-  {% endif %}
-
-  {% block wrapper %}
-    {% block sections %}{% endblock %}
-    {% block content %}{% endblock %}
-  {% endblock %}
 {% endblock %}
