--- a/app/Resources/views/layout/cover.html.twig
+++ b/app/Resources/views/layout/cover.html.twig
@@ -4,30 +4,17 @@
 {# This layout is the base of the standalone screen like the login page.
    It doesn't have the header nor the sidebar and the content is centered. #}
 
-{% block body %}
-  {% if app.session.flashbag.keys()|length %}
-  <div class="section section-empty">
-    <div class="container">
-    {% for flashClass, flashMessages in app.session.flashbag.all() %}
-      {% for flashMessage in flashMessages %}
-        <div class="alert alert-{{ flashClass }}">{{ flashMessage|trans({}, 'flash') }}</div>
-      {% endfor %}
-    {% endfor %}
-    </div>
-  </div>
-  {% endif %}
-
-  {% block wrapper %}
-    <div class="wrapper">
-      <div class="wrapper-inner">
-        <div class="container">
-          <ul class="pager">
-            <li class="previous"><a href="{{ path('homepage') }}" title="{{ 'layout.are_you_lost'|trans }}">&larr; {{ 'layout.go_back'|trans }}</a></li>
-          </ul>
-          {% block sections %}{% endblock %}
-          {% block content %}{% endblock %}
-        </div>
+{% block wrapper %}
+  <div class="wrapper">
+    <div class="wrapper-inner">
+      <div class="container">
+        <ul class="pager">
+          <li class="previous">
+            <a href="{{ path('homepage') }}" title="{{ 'layout.are_you_lost'|trans }}">&larr; {{ 'layout.go_back'|trans }}</a>
+          </li>
+        </ul>
+        {% block content %}{% endblock %}
       </div>
     </div>
-  {% endblock %}
+  </div>
 {% endblock %}
