--- a/src/Argon/NewsBundle/Resources/views/Block/post.html.twig
+++ b/src/Argon/NewsBundle/Resources/views/Block/post.html.twig
@@ -1,5 +1,4 @@
-<div class="section section-article{% if position is defined %} section-article-{{ position }}{% endif %}">
-  <div class="container">
+  <div class="article">
     <h3>{{ post.title }}</h3>
     <div class="content">
       {{ post.body|nl2br }}
@@ -8,4 +7,3 @@
       {{ 'news.post.footer'|trans({'%creator%': post.creator, '%published%': post.publishedAt|date}, 'web') }}
     </div>
   </div>
-</div>
