Remove admin info from profile

--- a/app/Resources/FOSUserBundle/views/layout.html.twig
+++ b/app/Resources/FOSUserBundle/views/layout.html.twig
@@ -1,5 +1,5 @@
 {% extends '::layout/basic.html.twig' %}
 
-{% block wrapper %}
+{% block content %}
   {% block fos_user_content %}{% endblock %}
 {% endblock %}
