--- a/app/Resources/views/layout/admin.html.twig
+++ b/app/Resources/views/layout/admin.html.twig
@@ -7,10 +7,10 @@
   <div class="page-header">
     <div class="container">
       <h3 class="page-title pull-left">
-        <a href="{{ path('admin_dashboard') }}">{{ 'layout.admin'|trans({}, 'ArgonWebBundle') }}</a>
+        <a href="{{ path('admin_dashboard') }}">{{ 'layout.admin'|trans({}, 'web') }}</a>
       </h3>
       <ul class="nav pull-right">
-        <li><a href="{{ path('homepage') }}">{{ 'layout.go_back'|trans({}, 'ArgonWebBundle') }}</a></li>
+        <li><a href="{{ path('homepage') }}" title="{{ 'layout.are_you_lost'|trans({}, 'web') }}">{{ 'layout.go_back'|trans({}, 'web') }}</a></li>
       </ul>
     </div>
   </div>
