--- a/app/Resources/FOSUserBundle/views/Profile/show_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/Profile/show_content.html.twig
@@ -1,31 +1,26 @@
 {% trans_default_domain 'FOSUserBundle' %}
 
-<div class="jumbotron jumbotron-title">
-  <div class="container">
-    <h1>{{ 'profile.title'|trans }}</h1>
+<h1>{{ 'profile.title'|trans }}</h1>
+
+<div class="panel panel-default">
+  <div class="panel-heading">{{ 'layout.logged_in_as'|trans({'%username%': user.username}) }}
+    <div class="pull-right">
+      <a href="{{ path('fos_user_change_password') }}">{{ 'profile.actions.change_password'|trans }} <span class="glyphicon glyphicon-eye-close"></span></a>
+      <a href="{{ path('fos_user_profile_edit') }}">{{ 'profile.actions.edit'|trans }} <span class="glyphicon glyphicon-edit"></span></a>
+    </div>
+  </div>
+  <div class="panel-body">
+    <dl class="dl-horizontal">
+      <dt>{{ 'profile.show.username'|trans }}</dt>
+      <dd>{{ user.username }}</dd>
+      <dt>{{ 'profile.show.email'|trans }}</dt>
+      <dd>{{ user.email }}</dd>
+    </dl>
   </div>
 </div>
 
-<div class="container">
-  <div class="panel panel-default">
-    <div class="panel-heading">{{ 'layout.logged_in_as'|trans({'%username%': user.username}) }}
-      <div class="pull-right">
-        <a href="{{ path('fos_user_change_password') }}">{{ 'profile.actions.change_password'|trans }} <span class="glyphicon glyphicon-eye-close"></span></a>
-        <a href="{{ path('fos_user_profile_edit') }}">{{ 'profile.actions.edit'|trans }} <span class="glyphicon glyphicon-edit"></span></a>
-      </div>
-    </div>
-    <div class="panel-body">
-      <dl class="dl-horizontal">
-        <dt>{{ 'profile.show.username'|trans }}</dt>
-        <dd>{{ user.username }}</dd>
-        <dt>{{ 'profile.show.email'|trans }}</dt>
-        <dd>{{ user.email }}</dd>
-      </dl>
-    </div>
-  </div>
-
-  <div class="panel panel-default">
-    <div class="panel-heading">{{ 'profile.characters.title'|trans }}</div>
-    {{ render(controller('ArgonGameBundle:Block:characters')) }}
+<div class="panel panel-default">
+  <div class="list-group">
+    <a href="{{ path("fos_user_security_logout") }}" class="list-group-item list-group-item-danger">{{ 'layout.logout'|trans }}</a>
   </div>
 </div>
