--- a/app/Resources/FOSUserBundle/views/Registration/register_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/Registration/register_content.html.twig
@@ -1,17 +1,23 @@
 {% trans_default_domain 'FOSUserBundle' %}
 
-<div class="jumbotron jumbotron-title">
-  <div class="container">
-    <h1>{{ 'registration.title'|trans }}</h1>
+<div class="panel panel-default panel-register">
+  <div class="panel-heading">
+    <h2>{{ 'registration.title'|trans }}</h2>
+  </div>
+
+  <div class="panel-body">
+    <form action="{{ path('fos_user_registration_register') }}" {{ form_enctype(form) }} method="POST" class="fos_user_registration_register" role="form">
+      {{ form_rest(form) }}
+      <div>
+        <button type="submit" class="btn btn-lg btn-primary btn-block">{{ 'registration.submit'|trans }}</button>
+      </div>
+    </form>
   </div>
 </div>
 
-<div class="container">
-  <form action="{{ path('fos_user_registration_register') }}" {{ form_enctype(form) }} method="POST" class="fos_user_registration_register" role="form">
-    {{ form_rest(form) }}
-    <div>
-      <button type="submit" class="btn btn-primary">{{ 'registration.submit'|trans }}</button>
-      <a href="{{ path("fos_user_resetting_request") }}" class="btn btn-link">{{ 'layout.reset_password'|trans }}</a>
-    </div>
-  </form>
+<div class="panel panel-default">
+  <div class="list-group">
+    <a href="{{ path("fos_user_security_login") }}" class="list-group-item">{{ 'layout.login'|trans }}</a>
+    <a href="{{ path("fos_user_resetting_request") }}" class="list-group-item">{{ 'layout.reset_password'|trans }}</a>
+  </div>
 </div>
