--- a/app/Resources/FOSUserBundle/views/Resetting/reset_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/Resetting/reset_content.html.twig
@@ -1,16 +1,23 @@
 {% trans_default_domain 'FOSUserBundle' %}
 
-<div class="jumbotron jumbotron-title">
-  <div class="container">
-    <h1>{{ 'resetting.reset.title'|trans }}</h1>
+<div class="panel panel-default">
+  <div class="panel-heading">
+    <h2>{{ 'resetting.reset.title'|trans }}</h2>
+  </div>
+
+  <div class="panel-body">
+    <form action="{{ path('fos_user_resetting_reset', {'token': token}) }}" {{ form_enctype(form) }} method="POST" class="fos_user_resetting_reset" role="form">
+      {{ form_rest(form) }}
+      <div>
+        <button type="submit" class="btn btn-primary">{{ 'resetting.reset.submit'|trans }}</button>
+      </div>
+    </form>
   </div>
 </div>
 
-<div class="container">
-  <form action="{{ path('fos_user_resetting_reset', {'token': token}) }}" {{ form_enctype(form) }} method="POST" class="fos_user_resetting_reset" role="form">
-    {{ form_rest(form) }}
-    <div>
-      <button type="submit" class="btn btn-primary">{{ 'resetting.reset.submit'|trans }}</button>
-    </div>
-  </form>
+<div class="panel panel-default">
+  <div class="list-group">
+    <a href="{{ path("fos_user_security_login") }}" class="list-group-item">{{ 'layout.login'|trans }}</a>
+    <a href="{{ path("fos_user_registration_register") }}" class="list-group-item">{{ 'layout.register'|trans }}</a>
+  </div>
 </div>
