--- a/app/Resources/FOSUserBundle/views/Security/login.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login.html.twig
@@ -1,4 +1,4 @@
-{% extends "FOSUserBundle::layout_cover.html.twig" %}
+{% extends "FOSUserBundle::layout.html.twig" %}
 {% trans_default_domain 'FOSUserBundle' %}
 
 {% block title %}{{ parent() }} - {{ 'layout.login'|trans }}{% endblock %}
@@ -35,15 +35,3 @@
     </div>
   </div>
 {% endblock fos_user_content %}
-
-{% block javascripts %}
-  {{ parent() }}
-  <script type="text/javascript">
-    function shake(e, p, t) { e.css('left', p.shift() + 'px');
-      if (p.length > 0) { setTimeout(function() { shake(e, p, t); }, t); }
-    }
-    jQuery(function($) { var p, e = $('.panel-login'), r = e.find('.alert').length > 0;
-      if (r) { shake(e.css('position', 'relative'), (p = [15, 30, 15, 0, -15, -30, -15, 0]).concat(p.concat(p)), 20); }
-    });
-  </script>
-{% endblock %}
