--- a/app/Resources/less/argonbook.less
+++ b/app/Resources/less/argonbook.less
@@ -23,6 +23,8 @@ abbr {
 
 .wrapper {
   display: table;
+  padding-top: 40px;
+  padding-bottom: 40px;
   width: 100%;
   height: 100%; /* For at least Firefox */
   min-height: 100%;
@@ -40,8 +42,6 @@ abbr {
 
 @media (min-width: 768px) {
   .wrapper .wrapper-inner {
-    vertical-align: middle; /* Start the vertical centering */
-
     .container {
       width: 100%; /* Must be percentage or pixels for horizontal alignment */
     }
