Links in group in view profile

--- a/app/Resources/less/argonbook.less
+++ b/app/Resources/less/argonbook.less
@@ -8,6 +8,11 @@
 @import "variables.less";
 
 
+//
+// Basic
+// --------------------------------------------------
+
+
 html, body {
   height: 100%;
 }
