--- a/app/Resources/FOSUserBundle/views/Profile/show_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/Profile/show_content.html.twig
@@ -3,12 +3,7 @@
 <h1>{{ 'profile.title'|trans }}</h1>
 
 <div class="panel panel-default">
-  <div class="panel-heading">{{ 'layout.logged_in_as'|trans({'%username%': user.username}) }}
-    <div class="pull-right">
-      <a href="{{ path('fos_user_change_password') }}">{{ 'profile.actions.change_password'|trans }} <span class="glyphicon glyphicon-eye-close"></span></a>
-      <a href="{{ path('fos_user_profile_edit') }}">{{ 'profile.actions.edit'|trans }} <span class="glyphicon glyphicon-edit"></span></a>
-    </div>
-  </div>
+  <div class="panel-heading">{{ 'layout.logged_in_as'|trans({'%username%': user.username}) }}</div>
   <div class="panel-body">
     <dl class="dl-horizontal">
       <dt>{{ 'profile.show.username'|trans }}</dt>
@@ -21,6 +16,8 @@
 
 <div class="panel panel-default">
   <div class="list-group">
+    <a href="{{ path('fos_user_profile_edit') }}" class="list-group-item"><span class="glyphicon glyphicon-edit"></span>&nbsp;&nbsp;{{ 'profile.actions.edit'|trans }}</a>
+    <a href="{{ path('fos_user_change_password') }}" class="list-group-item"><span class="glyphicon glyphicon-eye-close"></span>&nbsp;&nbsp;{{ 'profile.actions.change_password'|trans }}</a>
     <a href="{{ path("fos_user_security_logout") }}" class="list-group-item list-group-item-danger">{{ 'layout.logout'|trans }}</a>
   </div>
 </div>
