--- a/etc/php5/php.ini.j2
+++ b/etc/php5/php.ini.j2
@@ -8,16 +8,20 @@ memory_limit = {{ php_memory_limit|default('128M') }}
 ; if the file is not found.
 cgi.fix_pathinfo = 0
 
-; Disable the treatment of URLs.
-allow_url_fopen = Off
-
-; Errors
 {% if phpdev is defined and phpdev|bool %}
+  ; Report everything when developing.
   error_reporting = E_ALL
   display_errors = On
+
+  ; Allow open remote URLs is needed for Composer.
+  allow_url_fopen = On
 {% else %}
+  ; Hide display error on production.
   error_reporting = E_ALL & ~E_DEPRECATED & ~E_STRICT
   display_errors = Off
+
+  ; Disable the treatment of URLs.
+  allow_url_fopen = Off
 {% endif %}
 
 [Date]
