--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -4,9 +4,9 @@
 {% block body %}
   {% block header %}{% endblock %}
 
-  {% for flashClass, flashMessages in app.session.flashbag.all() %}
-    {% for flashMessage in flashMessages %}
-      <div class="alert alert-{{ flashClass }}">{{ flashMessage|trans({}, 'flash') }}</div>
+  {% for class, messages in app.session.flashbag.all() %}
+    {% for message in messages %}
+      <div class="alert alert-{{ class }}">{{ message|trans({}, 'flash') }}</div>
     {% endfor %}
   {% endfor %}
 
