Include normalize.css

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -6,7 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Welcome!{% endblock %}</title>
     {% block stylesheets %}
-      {% stylesheets filter="scss" "../src/ArgonWeb/argonbook.scss" %}
+      {% stylesheets filter="cssrewrite,scss"
+            "../vendor/necolas/normalize.css/normalize.css"
+            "../src/ArgonWeb/argonbook.scss"
+       %}
         <link rel="stylesheet" href="{{ asset_url }}">
       {% endstylesheets %}
     {% endblock %}
