Basic header with zass

--- a/app/Resources/views/index.html.twig
+++ b/app/Resources/views/index.html.twig
@@ -1,8 +1,8 @@
-{% extends 'layout.html.twig' %}
-{% trans_default_domain 'web' %}
+{% extends "default.html.twig" %}
+{% trans_default_domain "web" %}
 
-{% block title %}{{ parent() }} - {{ 'Alternate Reality Games Oriented Network'|trans }}{% endblock %}
+{% block title %}{{ parent() }} - {{ "Alternate Reality Games Oriented Network"|trans }}{% endblock %}
 
 {% block content %}
-  Homepage
+Homepage
 {% endblock %}
