--- a/app/Resources/views/player/list.html.twig
+++ b/app/Resources/views/player/list.html.twig
@@ -1,4 +1,4 @@
-{% extends "layout.html.twig" %}
+{% extends "default.html.twig" %}
 {% trans_default_domain "web" %}
 
 {% block title %}{{ parent() }} - {{ "Playerlist"|trans }}{% endblock %}
