Basic Menu and Playerlist

--- a/app/Resources/scss/argonbook.scss
+++ b/app/Resources/scss/argonbook.scss
@@ -6,9 +6,9 @@ $color-foreground:  #000000;
 $color-link:        #0000FF;
 $color-link-active: #0000FF;
 $color-link-hover:  #0000FF;
-$color-header:      #FFFFFF;
+$color-header:      #FAFAFA;
+$color-header-line: #F3F3F3;
 $color-header-logo: #000000;
-$color-header-line: #999999;
 
 // 3rd party
 @import "waiting-for-dev/zass/sass/zass"; // ☃
