--- a/app/Resources/views/index.html.twig
+++ b/app/Resources/views/index.html.twig
@@ -1,8 +1,7 @@
-{% extends "default.html.twig" %}
-{% trans_default_domain "web" %}
+{% extends "layout.html.twig" %}
 
-{% block title %}{{ parent() }} - {{ "Alternate Reality Games Oriented Network"|trans }}{% endblock %}
+{% block title %}{{ parent() }} - {{ "homepage.title"|trans }}{% endblock %}
 
 {% block content %}
-Homepage
+
 {% endblock %}
