--- a/app/Resources/views/playerlist.html.twig
+++ b/app/Resources/views/playerlist.html.twig
@@ -1,5 +1,4 @@
-{% extends "default.html.twig" %}
-{% trans_default_domain "web" %}
+{% extends "layout.html.twig" %}
 
 {% block title %}{{ parent() }} - {{ "Playerlist"|trans }}{% endblock %}
 
