--- a/src/Argon/WebBundle/Resources/views/Page/homepage.html.twig
+++ b/src/Argon/WebBundle/Resources/views/Page/homepage.html.twig
@@ -1,12 +1,12 @@
-{% extends '::layout/basic.html.twig' %}
-{% trans_default_domain 'web' %}
+{% extends "ArgonWebBundle::layout.html.twig" %}
+{% trans_default_domain "ArgonWebBundle" %}
 
-{% block title %}{{ parent() }} - {{ 'homepage.title'|trans }}{% endblock %}
+{% block title %}{{ parent() }} - {{ "homepage.title"|trans }}{% endblock %}
 
 {% block content %}
   {% if not is_granted("IS_AUTHENTICATED_REMEMBERED") %}
 
   {% endif %}
 
-  {{ render(controller('ArgonNewsBundle:Block:latest')) }}
+  {# render(controller('ArgonNewsBundle:Block:latest')) #}
 {% endblock %}
