--- a/src/Argon/WebBundle/Resources/views/layout.html.twig
+++ b/src/Argon/WebBundle/Resources/views/layout.html.twig
@@ -1,14 +1,15 @@
+{% trans_default_domain "ArgonWebBundle" %}
 <!DOCTYPE html>
 <html lang="{{ app.request.locale }}">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}{{ "layout.title"|trans }}{% endblock %}</title>
+    <title>{% block title %}{{ "Argonbook" }}{% endblock %}</title>
     {% block stylesheets %}
       {% stylesheets filter="cssrewrite,scss"
             "../vendor/necolas/normalize.css/normalize.css"
-            "../app/Resources/scss/argonbook.scss"
+            "@ArgonWebBundle/Resources/scss/argonbook.scss"
        %}
         <link rel="stylesheet" href="{{ asset_url }}">
       {% endstylesheets %}
@@ -20,17 +21,23 @@
       {% block header %}
       <header>
         <section>
-          <h1><a href="{{ path("homepage") }}">{{ "layout.logo"|trans }}</a></h1>
+          <h1><a href="{{ path("homepage") }}" title="{{ "Alternate Reality Games Oriented Network" }}">{{ "Argonbook" }}</a></h1>
           <ul>
             {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
-              <li><a href="{{ path("playerlist") }}">{{ "layout.playerlist"|trans }}</a></li>
-              <li>{{ 'layout.logged_in_as'|trans({'%username%': app.user.username}, 'FOSUserBundle') }}</li>
-              <li><a href="{{ path("fos_user_security_logout") }}">{{ "layout.logout"|trans({}, 'FOSUserBundle') }}</a></li>
+              {% if is_granted('ROLE_USER') %}
+                <li><a href="{{ path("fos_user_profile_show") }}">{{ "layout.profile"|trans }}</a></li>
+              {% endif %}
+              {% if is_granted("ROLE_SUPER_ADMIN") %}
+                <li><a href="{{ path("admin_dashboard") }}">{{ "layout.admin"|trans }}</a></li>
+              {% endif %}
+              {% if is_granted("ROLE_PREVIOUS_ADMIN") %}
+                <li><a href="{{ path("homepage", {"_switch": "_exit"}) }}">{{ "layout.switch_exit"|trans }}</a></li>
+              {% else %}
+                <li><a href="{{ path("fos_user_security_logout") }}">{{ "layout.logout"|trans({}, "FOSUserBundle") }}</a></li>
+              {% endif %}
             {% else %}
-              <li><a href="{{ path("fos_user_registration_register") }}">{{ "layout.register"|trans({}, 'FOSUserBundle') }}</a></li>
-              <li><a href="{{ path("fos_user_security_login") }}">{{ "layout.login"|trans({}, 'FOSUserBundle') }}</a></li>
+              <li><a href="{{ path("fos_user_security_login") }}">{{ "layout.login"|trans({}, "FOSUserBundle") }}</a></li>
             {% endif %}
-            </li>
           </ul>
         </section>
       </header>
