--- a/src/Argon/UserBundle/Resources/views/Admin/Player/index.html.twig
+++ b/src/Argon/UserBundle/Resources/views/Admin/Player/index.html.twig
@@ -1,4 +1,4 @@
-{% extends "ArgonWebBundle::layout.html.twig" %}
+{% extends "ArgonWebBundle::layout_admin.html.twig" %}
 {% trans_default_domain "ArgonUserBundle" %}
 {% set active = "player" %}
 
