--- a/src/Argon/WebBundle/Resources/views/Admin/dashboard.html.twig
+++ b/src/Argon/WebBundle/Resources/views/Admin/dashboard.html.twig
@@ -1,4 +1,4 @@
-{% extends "ArgonWebBundle::layout.html.twig" %}
+{% extends "ArgonWebBundle::layout_admin.html.twig" %}
 {% trans_default_domain "ArgonWebBundle" %}
 {% set active = "dashboard" %}
 
