--- a/src/Argon/UserBundle/Resources/views/Admin/Player/index.html.twig
+++ b/src/Argon/UserBundle/Resources/views/Admin/Player/index.html.twig
@@ -6,7 +6,7 @@
 
 {% block content %}
 <ol id="breadcrumb">
-    <li><a href="{{ path("admin_dashboard") }}">{{ "dashboard.title"|trans }}</a></li>
+    <li><a href="{{ path("admin_dashboard") }}">{{ "admin.dashboard.title"|trans }}</a></li>
     <li class="active">{{ "admin.player.title"|trans }}</li>
 </ol>
 <table>
