--- a/src/Argon/NewsBundle/Resources/views/Admin/Post/new.html.twig
+++ b/src/Argon/NewsBundle/Resources/views/Admin/Post/new.html.twig
@@ -1,14 +1,14 @@
-{% set active = 'news' %}
-{% extends 'ArgonWebBundle::Admin/layout.html.twig' %}
-{% trans_default_domain 'admin' %}
+{% extends "ArgonWebBundle::layout_admin.html.twig" %}
+{% trans_default_domain "ArgonNewsBundle" %}
+{% set active = "news" %}
 
-{% block title %}{{ parent() }} - {{ 'news.posts'|trans }} {{ 'news.actions.new'|trans }}{% endblock %}
+{% block title %}{{ parent() }} - {{ "admin.news.posts"|trans }} {{ "admin.news.actions.new"|trans }}{% endblock %}
 
 {% block content %}
 <ol class="breadcrumb">
-  <li><a href="{{ path('admin_dashboard') }}">{{ 'dashboard.title'|trans }}</a></li>
-  <li><a href="{{ path('admin_news') }}">{{ 'news.posts'|trans }}</a></li>
-  <li class="active">{{ 'news.actions.new'|trans }}</li>
+  <li><a href="{{ path('admin_dashboard') }}">{{ "admin.dashboard.title"|trans }}</a></li>
+  <li><a href="{{ path('admin_news') }}">{{ "admin.news.posts"|trans }}</a></li>
+  <li class="active">{{ "admin.news.actions.new"|trans }}</li>
 </ol>
 {{ form(form) }}
 {% endblock %}
