--- a/src/Argon/NewsBundle/Resources/views/Admin/Post/view.html.twig
+++ b/src/Argon/NewsBundle/Resources/views/Admin/Post/view.html.twig
@@ -1,41 +1,41 @@
-{% set active = 'news' %}
-{% extends 'ArgonWebBundle::Admin/layout.html.twig' %}
-{% trans_default_domain 'admin' %}
+{% extends "ArgonWebBundle::layout_admin.html.twig" %}
+{% trans_default_domain "ArgonNewsBundle" %}
+{% set active = "news" %}
 
-{% block title %}{{ parent() }} - {{ 'news.posts'|trans }} - {{ post }}{% endblock %}
+{% block title %}{{ parent() }} - {{ "admin.news.posts"|trans }} - {{ post }}{% endblock %}
 
 {% block content %}
-<ol class="breadcrumb">
-  <li><a href="{{ path('admin_dashboard') }}">{{ 'dashboard.title'|trans }}</a></li>
-  <li><a href="{{ path('admin_news') }}">{{ 'news.posts'|trans }}</a></li>
+<ol id="breadcrumb">
+  <li><a href="{{ path("admin_dashboard") }}">{{ "admin.dashboard.title"|trans }}</a></li>
+  <li><a href="{{ path("admin_news") }}">{{ "admin.news.posts"|trans }}</a></li>
   <li class="active">{{ post }}</li>
 </ol>
 <div class="form-horizontal">
   <div class="form-group">
-    <label class="col-sm-2 control-label">{{ 'news.post.title'|trans }}</label>
+    <label class="col-sm-2 control-label">{{ "admin.news.post.title"|trans }}</label>
     <div class="col-sm-10">
       <p class="form-control-static">{{ post.title }}</p>
     </div>
 
-    <label class="col-sm-2 control-label">{{ 'news.post.status'|trans }}</label>
+    <label class="col-sm-2 control-label">{{ "admin.news.post.status"|trans }}</label>
     <div class="col-sm-10">
       <p class="form-control-static">
       {% if post.isPublished %}
-        {{ 'news.post.published_at'|trans({'%date%': post.publishedAt|date}) }}
+        {{ "admin.news.post.published_at"|trans({"%date%": post.publishedAt|date}) }}
       {% else %}
-        {{ 'news.post.draft'|trans }}
+        {{ "admin.news.post.draft"|trans }}
       {% endif %}
       </p>
     </div>
 
-    <label class="col-sm-2 control-label">{{ 'news.post.creator'|trans }}</label>
+    <label class="col-sm-2 control-label">{{ "admin.news.post.creator"|trans }}</label>
     <div class="col-sm-10">
       <p class="form-control-static">
         <abbr title="{{ post.creator.username }}">{{ post.creator.name|default(post.creator.username) }}</abbr>
       </p>
     </div>
 
-    <label class="col-sm-2 control-label">{{ 'news.post.body'|trans }}</label>
+    <label class="col-sm-2 control-label">{{ "admin.news.post.body"|trans }}</label>
     <div class="col-sm-10">
       <p class="form-control-static">{{ post.body|nl2br }}</p>
     </div>
@@ -43,8 +43,8 @@
 </div>
 <ul class="nav nav-pills pull-right">
   {% if not post.isPublished %}
-    <li><a href="{{ path('admin_news_publish', {'slug': post.slug}) }}">{{ 'news.actions.publish'|trans }}</a></li>
+    <li><a href="{{ path("admin_news_publish", {"slug": post.slug}) }}">{{ "admin.news.actions.publish"|trans }}</a></li>
   {% endif %}
-  <li><a href="{{ path('admin_news_edit', {'slug': post.slug}) }}">{{ 'news.actions.edit'|trans }}</a></li>
+  <li><a href="{{ path("admin_news_edit", {"slug": post.slug}) }}">{{ "admin.news.actions.edit"|trans }}</a></li>
 </ul>
 {% endblock %}
