--- a/src/Argon/WebBundle/Resources/views/layout_admin.html.twig
+++ b/src/Argon/WebBundle/Resources/views/layout_admin.html.twig
@@ -4,5 +4,6 @@
 {% block nav %}
 <ul>
   <li><a href="{{ path("admin_player") }}">{{ "layout.admin.players"|trans }}</a></li>
+  <li><a href="{{ path("admin_news") }}">{{ "layout.admin.news"|trans }}</a></li>
 </ul>
 {% endblock %}
