--- a/src/Argon/NewsBundle/Resources/views/Block/post.html.twig
+++ b/src/Argon/NewsBundle/Resources/views/Block/post.html.twig
@@ -7,4 +7,4 @@
   <footer>
     {{ "admin.news.post.footer"|trans({"%creator%": post.creator, "%published%": post.publishedAt|date}) }}
   </footer>
-</div>
+</article>
